# musematic

./: .dockerignore  .gitignore  .gitleaks.toml  .gitleaksignore  .helmignore  .npmignore  .spectral.yaml  .terraformignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DOCS_GAPS.md  Makefile  README.de.md  README.es.md  README.fr.md  README.it.md  README.md  README.zh.md  SECURITY.md  mkdocs.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pr74-conflict-resolution.patch  requirements-docs.txt
apps/control-plane/: Dockerfile  conftest.py  pyproject.toml
apps/control-plane/entrypoints/: __init__.py  _helpers.py  agentops_testing_main.py  api_main.py  context_engineering_main.py  projection_indexer_main.py  scheduler_main.py  trust_certifier_main.py  worker_main.py  ws_main.py
apps/control-plane/lua/: budget_decrement.lua  lock_acquire.lua
apps/control-plane/migrations/: alembic.ini  env.py  tenant_table_catalog_snapshot.py
apps/control-plane/migrations/versions/: 001_initial_schema.py  002_auth_tables.py  003_accounts_tables.py  004_workspaces_tables.py  005_analytics_cost_models.py  006_registry_tables.py  007_context_engineering.py  008_memory_knowledge.py  009_interactions_conversations.py  010_connectors.py  011_policy_governance_engine.py  012_workflow_execution_engine.py  030_marketplace_schema.py  032_trust_certifications.py  033_fleet_management.py  034_evaluation_testing_schema.py  037_agentops_lifecycle.py  038_ai_agent_composition.py  039_scientific_discovery.py  040_simulation_digital_twins.py  041_fqn_backfill.py  042_prescreener_guardrail_layer.py  043_runtime_warm_pool_targets.py  044_ibor_and_decommission.py  045_oauth_providers_and_links.py  046_workspace_goal_lifecycle_and_decision.py  047_notifications_alerts.py  048_governance_pipeline.py  049_agent_contracts_and_certification.py  050_reprioritization_and_checkpoints.py  051_reasoning_trace_export.py  052_a2a_gateway.py  053_mcp_integration.py  054_trajectory_evaluation_schema.py  055_adaptation_pipeline_and_proficiency.py  056_proximity_graph_workspace.py  057_api_governance.py  058_multi_channel_notifications.py  058_security_compliance.py  059_model_catalog.py  (+34 more)
apps/control-plane/platform/: __init__.py
apps/control-plane/scripts/: backup_neo4j_dump.py  backup_qdrant_snapshots.py  init_qdrant_collections.py  lint_admin_role_gates.py  lint_bootstrap_secrets.py  verify_admin_openapi_tags.py
apps/control-plane/scripts/lint/: check_plan_version_immutable.py  check_platform_staff_role_scope.py  check_quota_enforcer_coverage.py  (+6 more)
apps/control-plane/tests/: a2a_gateway_support.py  accounts_support.py  agentops_support.py  analytics_support.py  auth_ibor_support.py  auth_oauth_support.py  auth_support.py  billing_quota_support.py  conftest.py  connectors_support.py  context_engineering_support.py  evaluation_testing_support.py  fleet_support.py  helpers.py  interactions_support.py  marketplace_support.py  mcp_support.py  memory_support.py  policies_support.py  registry_support.py  trust_support.py  workflow_execution_support.py  workspaces_support.py  ws_hub_support.py
apps/ops-cli/: README.md  demo.incus.yml  demo.stack.yml  pyproject.toml  secrets-migrate.py
apps/ops-cli/tests/: conftest.py
tests/e2e/: Makefile  README.md  conftest.py  pyproject.toml  test_chart_identity.py  test_cluster_bootstrap_contract.py
tests/e2e/chaos/: __init__.py  conftest.py  test_audit_chain_storage_failure.py  test_budget_hard_cap_midexec.py  test_kafka_broker_restart.py  test_loki_ingestion_outage.py  test_model_provider_total_outage.py  test_network_partition.py  test_policy_timeout.py  test_prometheus_scrape_failure.py  test_reasoning_engine_kill.py  test_residency_misconfig.py  test_runtime_pod_kill.py  test_s3_credential_revoke.py
tests/e2e/cluster/: capture-state.sh  install.sh  kind-config.yaml  load-images.sh  values-e2e.yaml
tests/e2e/fixtures/: __init__.py  agent.py  db_session.py  dns.py  http_client.py  kafka_consumer.py  mock_llm.py  policy.py  stripe.py  tenants.py  users.py  workspace.py  ws_client.py
tests/e2e/journeys/: __init__.py  conftest.py  test_helpers_contract.py  test_j01_admin_bootstrap.py  test_j02_creator_to_publication.py  test_j03_consumer_discovery_execution.py  test_j04_workspace_goal_collaboration.py  test_j05_trust_governance_pipeline.py  test_j06_operator_incident_response.py  test_j07_evaluator.py  test_j07_evaluator_improvement_loop.py  test_j08_external_a2a_mcp.py  test_j09_scientific_discovery.py  test_j10_multi_channel_notifications.py  test_j10_privacy_officer.py  test_j11_multi_region_journey.py  test_j11_security_officer.py  test_j12_finance_owner.py  test_j13_sre_multi_region.py  test_j14_model_steward.py  test_j15_accessibility_journey.py  test_j15_accessibility_user.py  test_j16_compliance_auditor.py  test_j17_dashboard_consumer.py  test_j18_super_admin_lifecycle.py  test_j19_new_user_signup.py  test_j20_workspace_owner.py  test_j21_platform_state.py  test_j22_tenant_provisioning.py  test_j23_quota_enforcement.py  test_j24_enterprise_provisioning.py  test_j25_marketplace_multi_scope.py  test_j26_abuse_prevention.py  test_j27_tenant_lifecycle_cancellation.py  test_j28_billing_lifecycle.py  test_j29_hetzner_topology.py  test_j30_plan_versioning.py  test_j31_cross_tenant_isolation.py  test_j32_webhook_idempotency.py  test_j33_trial_to_paid_conversion.py  (+6 more)
tests/e2e/performance/: __init__.py  test_concurrent_throughput.py  test_execution_roundtrip.py  test_launch_latency.py  test_reasoning_overhead.py  thresholds.py
tests/e2e/reports/: j01-junit.xml  j01-report.html  j02-junit.xml  j02-report.html  j03-junit.xml  j03-report.html  journeys-junit.xml  journeys-report.html
tests/e2e/scripts/: dev_auth.py  verify_admin_page_coverage.py  verify_no_orphans.py  verify_signed_tombstone.py
tests/e2e/seeders/: __init__.py  _client.py  agents.py  base.py  certifiers.py  fleets.py  namespaces.py  policies.py  tools.py  users.py  workspace_goals.py
tests/e2e/suites/: __init__.py  _helpers.py  ui_playwright.py
tests/e2e/tests/: test_mock_oauth_disabled_in_production.py
(+6740 files in other folders)
