[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musematic-control-plane"
version = "0.1.0"
description = "Musematic control-plane database foundation."
requires-python = ">=3.11"
dependencies = [
  "aioboto3>=13.1",
  "qdrant-client[grpc]>=1.12",
  "redis[hiredis]>=5.0",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "aiokafka>=0.11",
  "sqlalchemy[asyncio]>=2.0",
  "alembic>=1.13",
  "asyncpg>=0.29",
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "testcontainers[postgresql]>=4",
  "testcontainers[redis]>=4",
  "ruff>=0.8",
  "mypy>=1.13",
]

[project.optional-dependencies]
test = [
  "aioboto3>=13.1",
  "qdrant-client[grpc]>=1.12",
  "testcontainers>=4",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src", "tests"]
testpaths = ["tests"]
