[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musematic-control-plane"
version = "0.1.0"
description = "Musematic control-plane FastAPI scaffold."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "websockets>=13.0",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "aiokafka>=0.11",
  "redis[hiredis]>=5.0",
  "qdrant-client[grpc]>=1.12",
  "neo4j>=5.0",
  "clickhouse-connect>=0.8",
  "opensearch-py>=2.0",
  "aioboto3>=13.1",
  "grpcio>=1.65",
  "grpcio-tools>=1.65",
  "hvac>=2.3.0",
  "kubernetes-asyncio>=31.0",
  "PyJWT>=2.9",
  "PyYAML>=6.0",
  "pyotp>=2.9",
  "httpx>=0.27",
  "ldap3>=2.9",
  "aiohttp>=3.10",
  "jsonschema>=4.23",
  "apscheduler>=3.10",
  "aioimaplib>=1.0",
  "aiosmtplib>=3.0",
  "argon2-cffi>=23.1",
  "cryptography>=43.0",
  "email-validator>=2.2",
  "feedgen>=1.0,<2.0",
  "python-multipart>=0.0.9",
  "opentelemetry-sdk>=1.27",
  "opentelemetry-instrumentation-fastapi>=0.48b0",
  "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
  "opentelemetry-instrumentation-redis>=0.48b0",
  "opentelemetry-instrumentation-grpc>=0.48b0",
  "prometheus-client>=0.21",
  "numpy>=1.26",
  "scipy>=1.13",
  "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
  "boto3>=1.35",
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "hypothesis>=6.100",
  "respx>=0.21",
  "ruff>=0.7",
  "mypy>=1.11",
  "testcontainers[postgresql]>=4",
  "testcontainers[redis]>=4",
]
test = [
  "boto3>=1.35",
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "hypothesis>=6.100",
  "testcontainers[postgresql]>=4",
  "testcontainers[redis]>=4",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src", "tests"]
testpaths = ["tests"]
addopts = "-ra -m 'not integration' --import-mode=importlib"
markers = [
  "integration: requires external services or Docker-backed dependencies",
  "e2e: end-to-end scenario requiring a deployed stack",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "entrypoints"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "N",
  "UP",
  "B",
  "A",
  "ASYNC",
  "C4",
  "DTZ",
  "G",
  "LOG",
  "PIE",
  "PT",
  "PTH",
  "RUF",
]
ignore = [
  "B008",
]

[tool.ruff.lint.per-file-ignores]
"src/platform/__init__.py" = ["A005"]
"src/platform/common/clients/qdrant.py" = ["A002"]
"src/platform/common/clients/redis.py" = ["A002"]
"src/platform/common/config.py" = ["N802"]
"src/platform/common/logging.py" = ["A005"]
"src/platform/common/pagination.py" = ["UP046"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
plugins = ["pydantic.mypy"]
mypy_path = ["src"]
exclude = [
  "^src/platform/common/clients/runtime_controller_pb2(_grpc)?\\.py$",
  "^src/platform/grpc_stubs/runtime_controller_pb2(_grpc)?\\.py$",
]

[[tool.mypy.overrides]]
module = [
  "aioboto3",
  "aiokafka",
  "apscheduler.*",
  "clickhouse_connect",
  "grpc",
  "grpc.*",
  "feedgen.*",
  "kubernetes_asyncio",
  "kubernetes_asyncio.*",
  "ldap3",
  "neo4j",
  "neo4j.*",
  "numpy",
  "numpy.*",
  "opentelemetry",
  "opentelemetry.*",
  "opensearchpy",
  "opensearchpy.*",
  "prometheus_client",
  "prometheus_client.*",
  "qdrant_client",
  "qdrant_client.*",
  "scipy",
  "scipy.*",
  "yaml",
]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["src/platform"]
omit = [
  "src/platform/__init__.py",
  "src/platform/api/__init__.py",
  "src/platform/common/__init__.py",
  "src/platform/main.py",
  "src/platform/common/config.py",
  "src/platform/common/clients/__init__.py",
  "src/platform/common/clients/clickhouse.py",
  "src/platform/common/clients/neo4j.py",
  "src/platform/common/clients/object_storage.py",
  "src/platform/common/clients/opensearch.py",
  "src/platform/common/clients/qdrant.py",
  "src/platform/common/clients/reasoning_engine.py",
  "src/platform/common/clients/runtime_controller.py",
  "src/platform/common/clients/runtime_controller_pb2.py",
  "src/platform/common/clients/runtime_controller_pb2_grpc.py",
  "src/platform/grpc_stubs/*",
  "src/platform/testing/router_e2e_contract.py",
  "src/platform/common/clients/sandbox_manager.py",
  "src/platform/common/clients/simulation_controller.py",
  "src/platform/common/events/__init__.py",
  "src/platform/common/events/consumer.py",
  "src/platform/common/models/__init__.py",
  "src/platform/common/models/agent_namespace.py",
  "src/platform/common/models/membership.py",
  "src/platform/common/models/session.py",
  "src/platform/common/models/user.py",
  "src/platform/common/models/workspace.py",
  "src/platform/common/events/producer.py",
  "src/platform/*/router.py",
  "src/platform/search/*",
]

[tool.coverage.report]
skip_covered = false
show_missing = true
