[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musematic-e2e"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "pytest>=8.0",
  "pytest-asyncio",
  "pytest-html",
  "pytest-timeout",
  "httpx>=0.27",
  "websockets",
  "aiokafka>=0.11",
  "asyncpg",
  "kubernetes",
  "PyJWT>=2.9",
  "pyotp>=2.9",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
e2e = [
  "axe-playwright-python>=0.1.7",
  "playwright>=1.45",
  "pytest-xdist>=3.6",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["fixtures*", "journeys*", "seeders*", "suites*", "performance*"]
exclude = ["cluster*", "chaos*", "reports*", "tests*"]

[tool.setuptools.package-data]
journeys = ["fixtures/*.tar.gz"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = [
  "suites",
  "tests",
  "test_chart_identity.py",
  "test_cluster_bootstrap_contract.py",
]
markers = [
  "e2e: end-to-end scenario requiring a deployed stack",
  "observability: observability stack, dashboard, logging, tracing, and alerting checks",
  "slow: test takes more than 30 seconds",
  "requires_warm_pool: test assumes the runtime warm pool is filled",
  "journey: extended user journey scenario",
  "multi_region_ops: multi-region operations bounded-context suite",
  "j10_privacy_officer: privacy officer journey",
  "j11_security_officer: security officer journey",
  "j12_finance_owner: finance owner journey",
  "j13_sre_multi_region: SRE multi-region journey",
  "j14_model_steward: model steward journey",
  "j15_accessibility_user: accessibility user journey",
  "j16_compliance_auditor: compliance auditor journey",
  "j17_dashboard_consumer: dashboard consumer journey",
  "j19_new_user_signup: new user signup journey",
]
